# Robots-for-consumers

./: .gitignore  pyproject.toml
R4C/: celery.py  settings.py  task.py  urls.py
customers/migrations/: 0001_initial.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_is_active.py  0003_alter_order_is_active.py
robots/: models.py  urls.py  views.py
robots/migrations/: 0001_initial.py  0002_alter_robot_model_alter_robot_serial_and_more.py
