[tool.poetry]
name = "questionnaire"
version = "0.0.1.dev"
description = "Questionnaire for app 'shot in time'"
authors = [
    "Naumovitch Daniel <naumovitchdaniel@yandex.ru>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
python-dotenv = "^1.0.0"
openpyxl = "3.0.10"
celery = "^5.3.4"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['tests', 'venv', '.venv', 'deploy', 'tmp_*.py']
ignore = ['W503', 'E203', 'C901']
max-complexity = 10
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'
skip_magic_trailing_comma = true
